@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-08T01:59:31Z",
+  "timestamp" : "2022-06-08T08:30:54Z",
   "count_outdated" : 179,
   "uniques_outdated" : 80,
-  "count" : 199,
-  "uniques" : 91,
+  "count" : 200,
+  "uniques" : 92,
   "clones" : [
     {
       "timestamp": "2022-05-29T00:00:00Z",
@@ -72,6 +72,13 @@
       "timestamp": "2022-06-07T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
